<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rb_theme_system"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rb_theme_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark"/>

        <RadioButton
            android:id="@+id/rb_theme_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registration"
            android:textSize="80px" />

        <EditText
            android:id="@+id/text_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/enter_login"
            android:textSize="70px" />

        <EditText
            android:id="@+id/text_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:inputType="numberPassword"
            android:textSize="70px" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:text="@string/enter"
        android:gravity="center"/>
</FrameLayout>